<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_poster_discover_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster_discover_screen_content_desc" />

        <ImageView
            android:id="@+id/like_movie_button"
            android:layout_width="@dimen/fragment_discover_layout_width"
            android:layout_height="@dimen/fragment_discover_layout_height"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="64dp"
            android:alpha="0.8"
            android:contentDescription="@string/like_movie_button"
            android:cropToPadding="false"
            android:src="@drawable/like_flat" />

        <ImageView
            android:id="@+id/add_to_watchlist"
            android:layout_width="@dimen/fragment_discover_layout_width"
            android:layout_height="@dimen/fragment_discover_layout_height"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="64dp"
            android:alpha="0.8"
            android:contentDescription="@string/add_to_watchlist"
            android:cropToPadding="false"
            android:src="@drawable/binoculars" />

        <ImageView
            android:id="@+id/dislike_movie_button"
            android:layout_width="@dimen/fragment_discover_layout_width"
            android:layout_height="@dimen/fragment_discover_layout_height"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="64dp"
            android:alpha="0.8"
            android:contentDescription="@string/dislike_movie_button"
            android:cropToPadding="false"
            android:src="@drawable/dislike" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>