<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_two"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="6">

    <Space
        android:layout_width="1dp"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/illustration" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_start_margin"
        android:layout_marginLeft="@dimen/title_start_margin"
        android:layout_marginEnd="@dimen/title_bottom_margin"
        android:layout_marginRight="@dimen/title_bottom_margin"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.MyTitleText"
        tools:text="@string/app_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/signed_out"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail.Italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            tools:text="Welcome back user" />

        <Button
            android:id="@+id/new_ui_flow"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textAllCaps="false"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:text="@string/app_caption"
            android:theme="@style/FontFamilySet" />

        <Button
            android:id="@+id/newcontent_two"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/new_content_margin"
            android:padding="@dimen/new_content_padding"
            android:text="@string/app_caption"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/emailPasswordPaddingLeft"
        android:paddingLeft="@dimen/emailPasswordPaddingLeft"
        android:paddingEnd="@dimen/emailPasswordPaddingRight"
        android:paddingRight="@dimen/emailPasswordPaddingRight">

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/emailPasswordPaddingLeft"
            android:paddingLeft="@dimen/emailPasswordPaddingLeft"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/emailPasswordPaddingRight"
            android:paddingRight="@dimen/emailPasswordPaddingRight"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/fieldEmail_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints="Fill in your email address here"
                android:background="@drawable/password_group"
                android:gravity="center_horizontal"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textAlignment="center"
                android:theme="@style/FontFamilySet" />

            <EditText
                android:id="@+id/fieldPassword_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autofillHints="Fill in your password here"
                android:background="@drawable/password_group"
                android:gravity="center_horizontal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textAlignment="center"
                android:theme="@style/FontFamilySet" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:orientation="horizontal"
            android:paddingStart="@dimen/emailPasswordPaddingLeft"
            android:paddingLeft="@dimen/emailPasswordPaddingLeft"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/emailPasswordPaddingRight"
            android:paddingRight="@dimen/emailPasswordPaddingRight"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingStart="@dimen/emailPasswordPaddingLeft"
            android:paddingLeft="@dimen/emailPasswordPaddingLeft"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/emailPasswordPaddingRight"
            android:paddingRight="@dimen/emailPasswordPaddingRight"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:weightSum="2.0">

            <Button
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/verifyEmailButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_email"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>